--- a/Index.html
+++ b/Index.html
@@ -4,11 +4,10 @@
 <meta charset="utf-8">
 <title>Menu É Nintendo ou Nada</title>
 <style>
-
 	.menu{
 		width:100%;
 		height: 50px;
-	    background-color: none;
+	    background-color: gray;
 		font-family: 'arial';
 	}
 	.menu ul{
@@ -65,7 +64,6 @@
 </head>
 <body>
 
-
 <nav class="menu">
   <ul>
     <li><a href="www.enintendoounada.com"><img src="Icones/home.png">Home</a></li>
@@ -81,9 +79,6 @@
     <li><a href="http://www.enintendoounada.com/mobile"><img src="Icones/mobile.png">Mobile</a></li>
   </ul>
 </nav>
-
-
-
 
 </body>
 </html>
